fix spacing

--- a/react-front-end/src/styles/layout/_containers.scss
+++ b/react-front-end/src/styles/layout/_containers.scss
@@ -26,7 +26,7 @@
 }
 
 .spacer {
-  height: 26px;
+  height: 8px;
 }  
 
 .items {
